--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-h1{
+h1 {
     border-bottom: solid 2px gray;
-    padding: 20px;      
-    margin: 0;          
-    text-align: center;                
+    padding: 20px;
+    margin: 0;
+    text-align: center;
 }
-h2{
+h2 {
     margin-left: 5px;
 }
-ol{
+ol {
     border-right: solid 1px gray;
     width: 100px;
     margin: 0;
@@ -15,8 +15,17 @@ ol{
     text-align: center;
     font-size: 120%;
 }
-#grid{
+#grid {
     display: grid;
     grid-template-columns: 150px 1fr;
     margin-left: 10px;
+}
+
+.lshTitle {
+    color: brown;
+    transition: color 0.5s ease-in-out;
+}
+.titleClicked {
+    color: slateblue;
+    transition: color 0.5s ease-in-out;
 }
